# chip8-emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  chip8  imgui.ini  main.cpp
include/: config.h  cpu.h  gui.h  logger.h  memory.h  opcodes.h
src/: cpu.cpp  gui.cpp  logger.cpp  main.cpp  opcodes.cpp
